# pages

./: README.md  com.github.tintou.pages.json  meson.build
src/: Application.vala  DocumentView.vala  HeaderBar.vala  JsonUtils.vala  MainWindow.vala  lok-helpers.c  lok-helpers.cpp  lok-helpers.h  lok-helpers.vapi  meson.build
vapi/: libreofficekitgtk.vapi
